tests/declare_type/declare_type.exp
Error ------------------------------------------------------------------------------------------------- exported.js:1:16

The `declare` keyword is unnecessary for type exports. [unnecessary-declare-type-only-export]

   1| declare export type DeclareExportType = number; // unnecessary, but still works
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error ------------------------------------------------------------------------------------------------- exported.js:2:16

The `declare` keyword is unnecessary for type exports. [unnecessary-declare-type-only-export]

                     v-----------------------------------------------------------------
   2| declare export interface DeclareExportInterface { // unnecessary, but still works
   3|   baz: string;
   4| }
      ^


Error ------------------------------------------------------------------------------------- import_declare_type.js:11:15

Cannot assign `'shab'` to `k2` because string [1] is incompatible with number [2]. [incompatible-type]

   import_declare_type.js:11:15
   11| var k2: baz = 'shab'; // Error: string to int
                     ^^^^^^ [1]

References:
   import_declare_type.js:11:9
   11| var k2: baz = 'shab'; // Error: string to int
               ^^^ [2]


Error -------------------------------------------------------------------------------------- import_declare_type.js:26:2

Cannot cast object literal to `Foo` because object literal [1] is incompatible with string [2]. [incompatible-cast]

   import_declare_type.js:26:2
   26| ({toz: 3}) as Foo; // error : {toz : number} ~> string
        ^^^^^^^^ [1]

References:
   import_declare_type.js:26:15
   26| ({toz: 3}) as Foo; // error : {toz : number} ~> string
                     ^^^ [2]


Error -------------------------------------------------------------------------------------- import_declare_type.js:28:1

Cannot cast `3` to `Bar` because number [1] is incompatible with `A` [2]. [incompatible-cast]

   import_declare_type.js:28:1
   28| 3 as Bar; // error : number ~> A
       ^ [1]

References:
   import_declare_type.js:28:6
   28| 3 as Bar; // error : number ~> A
            ^^^ [2]


Error -------------------------------------------------------------------------------------- import_declare_type.js:30:1

Cannot cast `'lol'` to `Id` because string [1] is incompatible with number [2]. [incompatible-cast]

   import_declare_type.js:30:1
   30| 'lol' as Id<number>; // error : string ~> number
       ^^^^^ [1]

References:
   import_declare_type.js:30:10
   30| 'lol' as Id<number>; // error : string ~> number
                ^^^^^^^^^^ [2]


Error -------------------------------------------------------------------------------------- import_declare_type.js:36:1

Cannot cast `"3"` to `DeclareExportType` because string [1] is incompatible with number [2]. [incompatible-cast]

   import_declare_type.js:36:1
   36| "3" as DeclareExportType; // error: string ~> number
       ^^^ [1]

References:
   import_declare_type.js:36:8
   36| "3" as DeclareExportType; // error: string ~> number
              ^^^^^^^^^^^^^^^^^ [2]


Error -------------------------------------------------------------------------------------- import_declare_type.js:37:2

Cannot cast object literal to `DeclareExportInterface` because property `baz` is missing in object literal [1] but
exists in `DeclareExportInterface` [2]. [prop-missing]

   import_declare_type.js:37:2
   37| ({}) as DeclareExportInterface; // error: prop-missing
        ^^ [1]

References:
   import_declare_type.js:37:9
   37| ({}) as DeclareExportInterface; // error: prop-missing
               ^^^^^^^^^^^^^^^^^^^^^^ [2]



Found 8 errors
